2015-10-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Unkind buffer string notations like "'        '" are rewriten into "' ' * 8" format.

2015-09-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/Extension/test_dds_texture.rb: Added.
	* sample/NamespaceMigration/test_dds_texture.rb: Added.
	* sample/SDL2/testgl_sdl2-bindings.rb: Added.

2015-09-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Extension setup routines are divided into the module OpenGLExt.
	* lib/opengl_ext_common.rb (get_extension_enum_symbols, get_extension_command_symbols): Return array of enum/method symbols. Now you can know what symbols will be appended in the OpenGL module before setting up extensions.
	* lib/opengl_ext_common.rb (setup_extension): Added new argument 'skip_check'. You can skip availability check by setting true to 'skip_check'.
	* sample/NamespaceMigration/namespace_gl.rb, etc.: Demonstrates how to modify OpenGL prefix into that of ruby-opengl1/2.

2015-09-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/SDL2/testgl_ruby-sdl2.rb: Added.

2015-09-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-08-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/NeHe/nehe_lesson36.rb : Fixed random abort on Mac OS X.

2015-08-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Eliminated the use of Nokogiri.

2015-08-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/report_env.rb: Now gives GLFW some window hints to create a more higher OpenGL level context available.

2015-08-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* OpenGL ES 3.2

2015-08-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/gles.rb, sample/report_env_es.rb: Added some window handle check in preparation for context creation failure.

2015-08-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-08-06  vaiorabbit  <http://twitter.com/vaiorabbit>
